set up routes in index.js, sequelize in Connectio.js, and schema.sql

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,15 @@ node_modules
 .node_modules
 .env
 .DS_Store
+
+# Tittle and theme for my blog
+
+# "Life in the Saddle: Tales and Tips from an Equestrian Enthusiast"
+
+# "An old saddle is like a favorite pair of boots – scuffed, worn, and perfectly molded to the shape of its owner. It's a testament to the miles traveled, the battles won, and the memories made."
+
+# "Life in the saddle is a journey of trust, communication, and partnership. It's a dance between two souls, each with their own strengths and weaknesses, but together creating something truly beautiful."
+
+# "There's something about life in the saddle that makes the rest of the world fade away. It's just you and your horse, working together towards a common goal. All the stress, worries, and distractions of everyday life disappear in the rhythm of hoofbeats."
+
+# "Life in the saddle is a constant lesson in humility. Horses have a way of keeping you grounded, reminding you that no matter how much you know, there's always more to learn. But the rewards of that constant effort and growth are unparalleled – the bond between horse and rider, the rush of flying over a jump, the peace of a quiet trail ride."
